--- a/references.bib
+++ b/references.bib
@@ -110,6 +110,16 @@
   url = {https://w3c-ccg.github.io/did-spec/},
 }
 
+@inproceedings{GDPR,
+  Author = {Ching-Chun (Jim) {Huang} and Zih-shiuan (Spin) {Yuan}},
+  title = {Privacy Implication and Technical Requirements Toward GDPR Compliance},
+  year = {2019},
+  pages = {353--367}
+  booktitle = {Proceedings of the Future Technologies Conference},
+  isbn = {978-3-030-32522-0},
+  publisher = {Springer, Cham},
+}
+
 @inproceedings{blindSig,
   Author = {David Chaum},
   title = {Advances in Cryptology Proceedings of Crypto},
