Fix Puyuma citation

--- a/references.bib
+++ b/references.bib
@@ -29,7 +29,7 @@
 }
 
 @InProceedings{AutonomousDriving,
-  author="Shao-Hua Wang, Sheng-Wen Cheng, and Ching-Chun (Jim) Huang",
+  author={Shao-Hua {Wang} and Sheng-Wen {Cheng} and Ching-Chun (Jim) {Huang}},
   title="Puyuma: Linux-Based RTOS Experimental Platform for Constructing Self-driving Miniature Vehicles",
   booktitle="Intelligent Computing",
   year="2019",
