Add smart contract in Results.

--- a/references.bib
+++ b/references.bib
@@ -162,3 +162,11 @@
   numpages = {23},
   publisher = {IEEE},
 }
+
+@misc{Ethereum,
+	author = {Gavin Wood},
+	title = {Ethereum: A secure decentralised generalised transaction ledger EIP-150 REVISION (759dccd - 2017-08-07)},
+	journal = {Ethereum Project Yellow Paper},
+	year = {2017},
+	url = {https://ethereum.github.io/yellowpaper/paper.pdf},
+}
