--- a/paper.tex
+++ b/paper.tex
@@ -60,6 +60,7 @@
 
 %=================================================================
 % Add packages and commands here. The following packages are loaded in our class file: fontenc, calc, indentfirst, fancyhdr, graphicx, lastpage, ifthen, lineno, float, amsmath, setspace, enumitem, mathpazo, booktabs, titlesec, etoolbox, amsthm, hyphenat, natbib, hyperref, footmisc, geometry, caption, url, mdframed, tabto, soul, multirow, microtype, tikz
+\usepackage{listings}
 
 %=================================================================
 %% Please use the following mathematics environments: Theorem, Lemma, Corollary, Proposition, Characterization, Property, Problem, Example, ExamplesandDefinitions, Hypothesis, Remark, Definition, Notation, Assumption
@@ -368,6 +369,119 @@ This section may be divided by subheadings. It should provide a concise and prec
 \begin{quote}
 This section may be divided by subheadings. It should provide a concise and precise description of the experimental results, their interpretation as well as the experimental conclusions that can be drawn.
 \end{quote}
+
+\subsection{Smart Contract}
+
+In this experiment, we investigate the cost in smart contracts. We implement the smart contract and measure Gas usage. There are transaction cost and execution cost associated for an Ethereum transaction. We focus on execution cost which is included in transaction cost.
+
+\lstdefinestyle{solidity}{
+	captionpos=b,
+	tabsize=4
+}
+\lstset{style=solidity}
+
+\begin{lstlisting}[caption={generate contract}, label={lst:constructor}, frame=single]
+	constructor(
+		address _provider,
+		uint _price,
+		uint _brokerage,
+		uint _threshold,
+		string memory _channelRoot,
+		string memory _endPoint,
+		uint256 _totalNumber
+	) public {
+		broker = msg.sender;
+		provider = _provider;
+		isBrokerWithdraw = false;
+		isProviderWithdraw = false;
+		price = _price;
+		totalAmount = 0;
+		brokerage = _brokerage;
+		threshold = _threshold;
+		channelRoot = _channelRoot;
+		endPoint = _endPoint;
+		totalNumber = _totalNumber;
+		uploadedNumber = 0;
+		state = State.Launched;
+	}
+\end{lstlisting}
+
+To create a Product Contract, the broker publishs the address of the data provider, subscription fee, brokerage fee, threshold of consent votes of refunding, the channel root and endpoint of MAM channel, and expected number of streaming data.
+
+\begin{lstlisting}[caption={update blinded key and update signature}, label={lst:key_certification}, frame=single]
+	function addBlindedKey(
+		string memory _blindedKey
+	) public {
+		require(
+			msg.sender == provider,
+			"Only provider can add blindedKey."
+		);
+		require(
+			state == State.Launched,
+			"One key has been certified."
+		);
+		blindedKey = _blindedKey;
+		emit newBlindedKey(blindedKey);
+	}
+	
+	function addSignedBlindedKey(
+		string memory _signedBlindedKey
+	) public {
+		require(
+			msg.sender == broker,
+			"Only broker can add signedBlindedKey."
+		);
+		require(
+			state == State.Launched,
+			"One key has been certified."
+		);
+		signedBlindedKey = _signedBlindedKey;
+		state = State.KeyCertified;
+		emit newSignedBlindedKey(signedBlindedKey);
+	}
+\end{lstlisting}
+
+Before a data provider asks a broker to certify a session key, he blinds the session key first. The blinded session key is published to the smart contract by calling $addBlindedKey()$. The blind signature of the broker is also recorded on the smart contract. The broker should use $addSignedBlindedKey()$ to publish the signature. As a result, the key certification process is traceable afterward. It is hard for an attacker to compute the plaintext of the session key by messages on smart contracts.
+
+\begin{lstlisting}[caption={update encrypt key}, label={lst:key_exchange}, frame=single]
+	function addEncryptKey(
+		address _consumer,
+		string memory _encryptKey
+	) public {
+		require(
+			msg.sender == provider,
+			"Only provider can add blindedKey."
+		);
+		require(
+			consumer2Purchase[_consumer].isKeyAdded == false,
+			"One encryptKey has been added."
+		);
+		consumer2Purchase[_consumer].encryptKey = _encryptKey;
+		consumer2Purchase[_consumer].isKeyAdded = true;
+		emit newEncryptKey(_consumer, _encryptKey);
+	}
+\end{lstlisting}
+
+The data provider encrypts the session key and broker's signature with the consumer's public key and call $addEncryptKey()$ to publish the ciphertext to the smart contract. Consumers listen to $newEncryptKey$ event and decrypt the ciphertext to obtain the session key.
+
+\begin{table}[]
+	\caption{Gas consumption for each function of Product Contract}
+	\label{tab:gas}
+	\begin{tabular}{|l|l|l|l|}
+		\hline
+		function & sender & transaction cost (gas) & execution cost (gas) \\ \hline
+		generate contract & Broker & 2954334 & 2251002 \\ \hline
+		subscribe product & Consumer & 65758 & 44486 \\ \hline
+		update blinded key & Provider & 180801 & 147369 \\ \hline
+		update signature & Broker & 201110 & 167678 \\ \hline
+		update encrypt key & Provider & 201624 & 166784 \\ \hline
+		update number & Broker & 54289 & 32825 \\ \hline
+		ask refund & Consumer & 43817 & 22545 \\ \hline
+		withdraw & Broker/Provider/Consumer & 35991 & 14719 \\ \hline
+	\end{tabular}
+\end{table}
+
+Table \ref{tab:gas} shows the gas usage for each function. Creating a smart contract (Listing \ref{lst:constructor} ) costs the most gas, and functions (Listing \ref{lst:key_certification} and Listing \ref{lst:key_exchange} ) that are related to key certification and key exchange need a lot of gas as well. Storage on blockchain costs a lot. It is expensive to use memory in Solidity. For instance, an SSTORE operation may cost 20000 gas when the value is set to non-zero from zero\cite{Ethereum} according to Ethereum Yellow Paper. Smart contract initialization, storing ciphertexts and signatures during key certification and key exchange needs a lot of operations and storages which causes high gas consumption.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Bulleted lists look like this:
