--- a/references.bib
+++ b/references.bib
@@ -126,6 +126,12 @@
   year = {1983},
 }
 
+@inproceedings{cryptoNote,
+Author = {Ron Rivest},
+title = {Lecture Notes 15 : Voting, Homomorphic Encryption},
+year = {2002},
+}
+
 @article{UtilityStruct,
   Author = {Dusit Niyato and Dinh Thai Hoang and Nguyen Cong Luong and Ping Wang and Dong In Kim and Zhu Han},
   title = {Smart data pricing models for the internet of things: a bundling strategy approach},
