--- a/paper.tex
+++ b/paper.tex
@@ -231,7 +231,7 @@ Smart contract is a protocol for formulating agreement on a blockchain that prov
 \item \textbf{Blind Signature}
 There is inherent risk in revealing session keys to brokers since contents may be copied by brokers, which would result in data providers' losses. Therefore, a blind signature is used to prevent session key copying for such circumstances. Blind signature\cite{blindSig} is a form of digital signature where the message is first "blinded" by a random "blinding factor", then passed to a signer to sign. The resulting message, along with the blinding factor, can be later verified with the signer's public key. In our system design, brokers would perform blind signatures during the process of adding new products for data providers, in order to send the secret key of the MAM channel to the smart contract without knowing it.
 
-RSA blind signature\cite{cryptoNote} is used in our research. The data provider chooses a random number $r$ as a blinding factor. $e$ is the broker's public key. To prevent the message from being known by the broker, the data provider sends blinding message $c$ to the broker instead of $m$.
+RSA blind signature\cite{cryptoNote} is used in our research. The data provider chooses a random number $r$ as a blinding factor. $e$ is the broker's public key. To prevent the message $m$ from being known by the broker, the data provider sends blinding message $c$ to the broker instead of $m$.
 
 \begin{equation}
 C = r^e m
@@ -392,7 +392,7 @@ This section may be divided by subheadings. It should provide a concise and prec
 
 \subsection{Smart Contract}
 
-In this experiment, we investigate the cost in smart contracts. We implement the smart contract and measure Gas usage. There are transaction cost and execution cost associated for an Ethereum transaction. We focus on execution cost which is included in transaction cost.
+In this experiment, we investigate the cost of executing smart contracts. We implement the smart contract and measure gas(transaction fee of the Ethereum blockchain) usage. There are transaction cost and execution cost associated for an Ethereum transaction. We focus on execution cost which is included in transaction cost.
 
 \lstdefinestyle{solidity}{
 	captionpos=b,
@@ -426,7 +426,7 @@ In this experiment, we investigate the cost in smart contracts. We implement the
 	}
 \end{lstlisting}
 
-To create a Product Contract, the broker publishs the address of the data provider, subscription fee, brokerage fee, threshold of consent votes of refunding, the channel root and endpoint of MAM channel, and expected number of streaming data.
+To create a Product Contract, the broker publishes the address of the data provider, subscription fee, brokerage fee, threshold of consent votes of refunding, the channel root and endpoint of MAM channel, and expected number of streaming data.
 
 \begin{lstlisting}[caption={update blinded key and update signature}, label={lst:key_certification}, frame=single]
 	function addBlindedKey(
@@ -461,7 +461,7 @@ To create a Product Contract, the broker publishs the address of the data provid
 	}
 \end{lstlisting}
 
-Before a data provider asks a broker to certify a session key, he blinds the session key first. The blinded session key is published to the smart contract by calling $addBlindedKey()$. The blind signature of the broker is also recorded on the smart contract. The broker should use $addSignedBlindedKey()$ to publish the signature. As a result, the key certification process is traceable afterward. It is hard for an attacker to compute the plaintext of the session key by messages on smart contracts.
+Before a data provider asks a broker to certify a session key, he blinds the session key first. The blinded session key is published to the smart contract by calling $addBlindedKey()$. Also the broker should use $addSignedBlindedKey()$ to publish the signature. As a result, the key certification process is recorded on the smart contract which is traceable afterward. By the way, it is hard for an attacker to compute the session key by blinding messages and signatures on smart contracts.
 
 \begin{lstlisting}[caption={update encrypt key}, label={lst:key_exchange}, frame=single]
 	function addEncryptKey(
@@ -484,7 +484,7 @@ Before a data provider asks a broker to certify a session key, he blinds the ses
 
 The data provider encrypts the session key and broker's signature with the consumer's public key and call $addEncryptKey()$ to publish the ciphertext to the smart contract. Consumers listen to $newEncryptKey$ event and decrypt the ciphertext to obtain the session key.
 
-\begin{table}[]
+\begin{table}[H]
 	\caption{Gas consumption for each function of Product Contract}
 	\label{tab:gas}
 	\begin{tabular}{|l|l|l|l|}
@@ -501,7 +501,7 @@ The data provider encrypts the session key and broker's signature with the consu
 	\end{tabular}
 \end{table}
 
-Table \ref{tab:gas} shows the gas usage for each function. Creating a smart contract (Listing \ref{lst:constructor} ) costs the most gas, and functions (Listing \ref{lst:key_certification} and Listing \ref{lst:key_exchange} ) that are related to key certification and key exchange need a lot of gas as well. Storage on blockchain costs a lot. It is expensive to use memory in Solidity. For instance, an SSTORE operation may cost 20000 gas when the value is set to non-zero from zero\cite{Ethereum} according to Ethereum Yellow Paper. Smart contract initialization, storing ciphertexts and signatures during key certification and key exchange needs a lot of operations and storages which causes high gas consumption.
+Table \ref{tab:gas} shows the gas usage for each function. Creating a smart contract (Listing \ref{lst:constructor} ) costs the most gas, and functions (Listing \ref{lst:key_certification} and Listing \ref{lst:key_exchange}) that are related to key certification and key exchange need a lot of gas as well. Storage on blockchain costs a lot. It is expensive to use memory in Solidity. For instance, an SSTORE operation may cost 20000 gas when the value is set to non-zero from zero\cite{Ethereum} according to Ethereum Yellow Paper. Smart contract initialization, storing ciphertexts and signatures during key certification and key exchange needs a lot of operations and storages which causes high gas consumption. On the other hand, we can observe that the broker is responsible for the most part of transaction fees while consumers only need to send one transaction to subscribe the product if they don't have to refund.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Bulleted lists look like this:
