--- a/paper.tex
+++ b/paper.tex
@@ -158,7 +158,7 @@ Looking at Airbox\cite{LASS} as an example, every household with an Airbox devic
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\textwidth]{airbox}
+    \includegraphics[width=3.3 in]{airbox}
     \caption{IoT-enabled personal air quality assistant.}
     \label{fig:airbox}
 \end{figure}
@@ -199,7 +199,7 @@ Brokers represent data providers and consumers to perform computing tasks as bro
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.4\textwidth]{system_design}
+    \includegraphics[width=3.3 in]{system_design}
     \caption{The system design of a decentralized architecture which consist of a registrar, data providers, consumers and brokers.}
     \label{fig:system_design}
 \end{figure}
@@ -285,7 +285,7 @@ The entire trading process is as shown in Figure \ref{fig:trading_product}. Once
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=2 cm]{trading_product}
+    \includegraphics[width=3.3 in]{trading_product}
     \caption{The process for the product trading.}
     \label{fig:trading_product}
 \end{figure}
