--- a/paper.tex
+++ b/paper.tex
@@ -68,7 +68,7 @@
 
 %=================================================================
 % Full title of the paper (Capitalized)
-\Title{Decentralized Data Marketplace to Enable Trusted Machine Economy}
+\Title{Decentralized Data Marketplace to Enable Trusted Machine Economy $^{\dagger}$}
 
 % Author Orchid ID: enter ID or remove command
 \newcommand{\orcidauthorA}{0000-0000-000-000X} % Add \orcidA{} behind the author's name
@@ -89,7 +89,6 @@ $^{3}$ \quad BiiLabs, Co., Ltd.}
 % Contact information of the corresponding author
 \corres{Correspondence: jserv@ccns.ncku.edu.tw}
 
-
 % Current address and/or shared authorship
 %\firstnote{Current address: Affiliation 3} 
 %\secondnote{These authors contributed equally to this work.}
@@ -97,7 +96,7 @@ $^{3}$ \quad BiiLabs, Co., Ltd.}
 
 %\simplesumm{} % Simple summary
 
-%\conference{} % An extended version of a conference paper
+\conference{2019 IEEE Eurasia Conference on IOT, Communication and Engineering (IEEE ECICE 2019), National Formosa University, Yunlin, Taiwan, 3–6 October, 2019} % An extended version of a conference paper
 
 % Abstract (Do not insert blank lines, i.e. \\) 
 %%%% 200 words
