Rewrite Component mam with mamv2 details

--- a/references.bib
+++ b/references.bib
@@ -74,6 +74,24 @@
   urldate = {2017-11-05}
 }
 
+@misc{MAMSpec,
+  title = {Masked Authenticated Messaging Version 2 Protocol},
+  url = {https://github.com/iotaledger/entangled/blob/develop/mam/spec.pdf},
+  urldate = {2019-03-07}
+}
+
+@article{MAMDescription,
+  title = "Authenticating Health Activity Data Using Distributed
+Ledger Technologies",
+  journal = "Computational and Structural Biotechnology Journal",
+  volume = "16",
+  pages = "257 - 266",
+  year = "2018",
+  doi = "https://doi.org/10.1016/j.csbj.2018.06.004",
+  url = "https://www.sciencedirect.com/science/article/pii/S2001037018300345",
+  author = "James Brogan, Immanuel Baskaran, Navin Ramachandrana",
+}
+
 @misc{IOTADataMarket,
   title = {IOTA Data Marketplace},
   url = {https://data.iota.org},
