--- a/paper.tex
+++ b/paper.tex
@@ -233,7 +233,7 @@ There is inherent risk in revealing session keys to brokers since contents may b
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=3.3 in]{blind_signature}
-	\caption{The scheme of blind Signature.}
+	\caption{The scheme of blind signature.}
 	\label{fig:blind_signature}
 \end{figure}
 
@@ -314,7 +314,7 @@ It is probable that the streaming data sources are delayed or even interrupted a
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=2 in]{refund}
-	\caption{The process of the refunding.}
+	\caption{The process of refund.}
 	\label{fig:refund}
 \end{figure}
 
