Reword component mam

--- a/references.bib
+++ b/references.bib
@@ -81,8 +81,7 @@
 }
 
 @article{MAMDescription,
-  title = "Authenticating Health Activity Data Using Distributed
-Ledger Technologies",
+  title = "Authenticating Health Activity Data Using Distributed Ledger Technologies",
   journal = "Computational and Structural Biotechnology Journal",
   volume = "16",
   pages = "257 - 266",
