--- a/paper.tex
+++ b/paper.tex
@@ -222,10 +222,10 @@ Either channel or endpoint is like singly-linked list. The MAM channel's ID and 
 The authentication in MAM includes source and data authentication. Source authentication ensures that the message originates from the claimed owner, and data authentication ensures the integrity of the data from that sender. These are achieved through Merkle signature scheme which is a digital signature scheme based on Merkle Hash Trees and One-way hash functions. However, the size of Merkle Hash Trees should be fixed at start, which is the size of a channel and endpoint is decided before creation. Thus data providers need to firstly decide how to distribute data product into MAM channels or endpoints.
 
 % interaction between provider
-Data provider is the main role to interact with MAM. With a seed, a provider can starts creating a channel or endpoint. As above mentioned, the size of a channel and an endpoint is fixed, thus providers need to decide the selling unit of data products according to its data type or pricing strategy. Also data providers can a make product preview which is public and not encrypted on MAM. In Figure \ref{fig:mam_struct}, a "central endpoint" means its endpoint's ID is the same as channel's ID. By attaching part of the product to central endpoint can give consumers a quick preview with channel's ID only. Then if the trade establishes, providers can then give consumers the encrypted endpoint and session key to consumers. After retrieving the messages on endpoints, users can easily verify the content with digital signatures included in messages. 
+Data provider is the main role to interact with MAM. With a seed, a provider can start creating a channel or endpoint. As above mentioned, the length of a channel and an endpoint is fixed, thus providers need to decide the selling unit of data products according to its data type or pricing strategy. Also data providers can a make product preview which is public and not encrypted on MAM. In Figure \ref{fig:mam_struct}, a "central endpoint" means its endpoint's ID is the same as channel's ID. By attaching part of the product to central endpoint can give consumers a quick preview with channel's ID only. Then if the trade establishes, providers can then give consumers the encrypted endpoint and session key to consumers. After retrieving the messages on endpoints, users can easily verify the content with digital signatures included in messages. 
 
 % why MAM
-MAM is considered to be the most important fundamental building block in the proposed system. The decentralized and fault-tolerant charactaristic of distributed ledgers reduce the risks of centralized storage services, and the underlying IOTA network is scalable which withstands real-time data while increasing users all over the world. Moreover, the features of MAM makes it an even better data storage which allows preserving streaming data while ensuring data integrity, proving data ownership to any participants and managing session keys of data. And through the access control and the desing of channel, endpoint of MAM, participants are allowed to subscribe the future data.  
+MAM is considered as the most important fundamental building block in the proposed system. The decentralized and fault-tolerant charactaristic of distributed ledgers reduce the risks of centralized storage services, and the underlying IOTA network is scalable which withstands real-time data while increasing users all over the world. Moreover, the features of MAM makes it an even better data storage which allows preserving streaming data while ensuring data integrity, proving data ownership to any participants and managing session keys of data. And through the access control and the desing of channel, endpoint of MAM, participants are allowed to subscribe the future data.  
 
 % efficiency problem of MAM
 While the operations of MAM time-consuming, brokers are responsible not only for being the bridge of providers and consumers but for all MAM related operations, such as channel creation and encrypted data publishing in our system. See Figure \ref{fig:launching_product}
