--- a/paper.tex
+++ b/paper.tex
@@ -84,7 +84,7 @@
 \address{%
 $^{1}$ \quad Department of Computer Science and Information Engineering, National Taiwan University\\
 $^{2}$ \quad Department of Computer Science and Information Engineering, National Cheng Kung University\\
-$^{3}$ \quad BiiLabs, Co., Ltd.}
+$^{3}$ \quad BiiLabs Co., Ltd.}
 
 % Contact information of the corresponding author
 \corres{Correspondence: jserv@ccns.ncku.edu.tw}
