Modify session key exchange

--- a/references.bib
+++ b/references.bib
@@ -210,3 +210,13 @@ year = {2002},
 	publisher = {ACM},
 	address = {New York, NY, USA},
 } 
+
+@INPROCEEDINGS{Medrec,
+	author={A. {Azaria} and A. {Ekblaw} and T. {Vieira} and A. {Lippman}},
+	booktitle={2016 2nd International Conference on Open and Big Data (OBD)},
+	title={MedRec: Using Blockchain for Medical Data Access and Permission Management},
+	year={2016},
+	pages={25-30},
+	doi={10.1109/OBD.2016.11},
+	month={Aug},
+}
