--- a/paper.tex
+++ b/paper.tex
@@ -313,7 +313,7 @@ The entire trading process is as shown in Figure \ref{fig:trading_product}. Once
     \label{fig:trading_product}
 \end{figure}
 
-Next, session key $k$ should be exchanged between the data provider and consumers. Instead of using off-chain solution which is efficient and low-cost, we use smart contract to transfer the session key\cite{3tierDataMarket} that is easy to trace the record and prevent malicious participants to cheat others.
+Next, session key $k$ should be exchanged between the data provider and consumers. To exchange data, some researchs\cite{Medrec} seek an off-chain solution which uses an end-to-end communication that is efficient and low-cost. However, it is hard to avoid that the data source is unavailable or the sender sends incorrect data intentionally. Instead of using off-chain solution, we use smart contract to transfer the session key\cite{3tierDataMarket} that not only ensures the consistency of the session key, the availability of the source and the traceability of the record, but also prevents malicious participants to cheat others.
 
 \begin{lstlisting}[caption={update encrypt key}, label={lst:key_exchange}, frame=single]
     function addEncryptKey(
