Modify session key exchange and update images

--- a/paper.tex
+++ b/paper.tex
@@ -296,7 +296,7 @@ Brokers certify session keys as well. Only one session key can be signed in each
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=3.3 in]{key_certification}
+    \includegraphics[width=6 in]{key_certification}
     \caption{Session key certification process with blind signature.}
     \label{fig:key_certification}
 \end{figure}
@@ -313,7 +313,7 @@ The entire trading process is as shown in Figure \ref{fig:trading_product}. Once
     \label{fig:trading_product}
 \end{figure}
 
-Next, session key $k$ should be exchanged between the data provider and consumers. To exchange data, some researchs\cite{Medrec} seek an off-chain solution which uses an end-to-end communication that is efficient and low-cost. However, it is hard to avoid that the data source is unavailable or the sender sends incorrect data intentionally. Instead of using off-chain solution, we use smart contract to transfer the session key\cite{3tierDataMarket} that not only ensures the consistency of the session key, the availability of the source and the traceability of the record, but also prevents malicious participants to cheat others.
+Next, session key $k$ should be exchanged between the data provider and consumers. To exchange data, Azaria et al\cite{Medrec} seek an off-chain solution which uses an end-to-end communication that is efficient and low-cost. However, it is hard to avoid that the data source is unavailable or the sender sends incorrect data intentionally. Instead of using off-chain solution, we use smart contract to transfer the session key\cite{3tierDataMarket} that not only ensures the consistency of the session key, the availability of the source and the traceability of the record, but also prevents malicious participants to cheat others.
 
 \begin{lstlisting}[caption={update encrypt key}, label={lst:key_exchange}, frame=single]
     function addEncryptKey(
@@ -338,7 +338,7 @@ The trading process is shown in Figure \ref{fig:key_exchange}. The data provider
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=3.3 in]{key_exchange}
+    \includegraphics[width=6 in]{key_exchange}
     \caption{Session key exchange process between the data provider and consumer.}
     \label{fig:key_exchange}
 \end{figure}
