Add Result - MAM

--- a/references.bib
+++ b/references.bib
@@ -220,3 +220,15 @@ year = {2002},
 	doi={10.1109/OBD.2016.11},
 	month={Aug},
 }
+
+@misc{Entangled,
+	title = {Masked Authenticated Messaging, entangled},
+	url = {https://github.com/iotaledger/entangled/tree/develop/mam},
+}
+
+@article{MSS,
+  title={Merkle signature schemes, merkle trees and their cryptanalysis},
+  author={Becker, Georg},
+  journal={Ruhr-University Bochum, Tech. Rep},
+  year={2008}
+}
