--- a/paper.tex
+++ b/paper.tex
@@ -219,7 +219,7 @@ Either channel or endpoint is like singly-linked list. The MAM channel's ID and 
     \label{fig:mam_struct}
 \end{figure}
 
-The authentication in MAM includes source and data authentication. Source authentication ensures that the message originates from the claimed owner, and data authentication ensures the integrity of the data from that sender. These are achieved through Merkle signature scheme which is a digital signature scheme based on Merkle Hash Trees and One-way hash functions. However, the size of Merkle Hash Trees should be fixed at start, which is the size of a channel and endpoint is decided before creation. Thus data providers need to firstly decide how to distribute data product into MAM channels or endpoints.
+The authentication in MAM includes source and data authentication. Source authentication ensures that the message originates from the claimed owner, and data authentication ensures the integrity of the data from that sender. These are achieved through Merkle signature scheme\cite{MSS} (MSS) which is a digital signature scheme based on Merkle Hash Trees and One-way hash functions. However, the size of Merkle Hash Trees should be fixed at start, which is the size of a channel and endpoint is decided before creation. Thus data providers need to firstly decide how to distribute data product into MAM channels or endpoints.
 
 % interaction between provider
 Data provider is the main role to interact with MAM. With a seed, a provider can start creating a channel or endpoint. As above mentioned, the length of a channel and an endpoint is fixed, thus providers need to decide the selling unit of data products according to its data type or pricing strategy. Also data providers can a make product preview which is public and not encrypted on MAM. In Figure \ref{fig:mam_struct}, a "central endpoint" means its endpoint's ID is the same as channel's ID. By attaching part of the product to central endpoint can give consumers a quick preview with channel's ID only. Then if the trade establishes, providers can then give consumers the encrypted endpoint and session key to consumers. After retrieving the messages on endpoints, users can easily verify the content with digital signatures included in messages. 
@@ -438,6 +438,82 @@ Figure.\ref{fig:payoff_pic} illustrates the market mechanism of the subscription
 
 
 \section{Results}
+It is important to claim that all participants in data marketplace do not need to hold an IOTA full node which maintains the transaction history and exchanges information of the Tangle. Each role is only required to run client libraries and communicate with IOTA full nodes to interact with the Tangle. Therefore, in the following evaluations, all devices run with client library only.
+
+\subsection{MAM Performance Evaluation}
+MAM is a secure and validatable data storage of the proposed architecture. And publishing data to MAM is the primary key to resolve all the difficulties discussed in previous sections. The interactions between data providers and MAM can be frequent. Data providers can either upload data in a short time interval or maintain multiple MAM channels or endpoints at the same time, hence the operation of MAM is one of the bottleneck in data marketplace.
+
+In this section, time measurement is evaluated in two MAM operations: channel/endpoint creation and data attachment to endpoints. To perform the evaluation assessment, a personal computer and a Raspberry Pi 3 have been used to run MAM. 
+
+\subsubsection{Channel / Endpoint Creation}
+The length of a channel or endpoint is $2^{height}$ where \textit{height} is the height of Merkle Hash Tree in Merkle signature scheme (MSS). A channel with height $n$ can create $2^n$ endpoints, and an endpoint with height $m$ can attach $2^m$ messages, therefore the capacity of a channel is $2^{nm}$ messages in total. The greater the \textit{height} of MSS, the longer the channel/endpoint, however the higher the computational power required. In this task, both channel and endpoint creation are tested and the \textit{height} is set from 1 to 7 which is quite enough for data providers to upload data. The results are shown in Table.  \ref{tab:channel_create}, Table. \ref{tab:endpoint_create}. The time duration for each \textit{height} is the average time of running 100 rounds.
+
+\begin{table}[H]
+	\caption{Time measurement of channel creation}
+	\centering
+	\label{tab:channel_create}
+	\begin{tabular}{ccc}
+	\toprule
+		\textbf{height of MSS} & \textbf{PC (sec)} & \textbf{Raspberry Pi 3 (sec)} \\ 
+		\midrule
+		1 & 0.26183 & 2.908702 \\ 
+		2 & 0.524076 & 5.805524 \\ 
+		3 & 1.045942 & 11.555660 \\ 
+		4 & 2.092989 & 23.178036 \\ 
+		5 & 4.19515 & 46.164079\\ 
+		6 & 8.361586 & 92.320173\\ 
+		7 & 16.651607 & 185.292243\\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+\begin{table}[H]
+	\caption{Time measurement of endpoint creation}
+	\centering
+	\label{tab:endpoint_create}
+	\begin{tabular}{ccc}
+	\toprule
+		\textbf{height of MSS} & \textbf{PC (sec)} & \textbf{Raspberry Pi 3 (sec)} \\ 
+		\midrule
+		1 & 0.256425 & 2.887064 \\ 
+		2 & 0.505679 & 5.767912 \\ 
+		3 & 0.999524 & 11.550455 \\ 
+		4 & 1.994017 & 23.260508 \\ 
+		5 & 3.965007 & 46.748366 \\ 
+		6 & 7.918925 & 93.182975 \\ 
+		7 & 16.561419 & 186.064562 \\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+The results in Table.  \ref{tab:channel_create}, Table. \ref{tab:endpoint_create} are plotted in Fig. \ref{fig:mam_create}. Since the creation of channel and endpoint are MSS calculation, the curves of the same hardware are merely identical. On the other hand, the performance of Raspberry Pi 3 grows rapidly when \textit{height} is larger.
+  
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=3.3 in]{mam_create}
+    \caption{Time cost of MAM creation.}
+    \label{fig:mam_create}
+\end{figure}
+
+\subsubsection{Messages Publishment}
+Publishing a message to MAM is attaching a zero-value transaction to the Tangle which requires two processes:
+\begin{itemize}[leftmargin=*,labelsep=5.8mm]
+	\item	Tips selection: In IOTA protocol, a new-coming transaction needs to pick up 2 existed transactions called tips to reference and verify. The tips are provided by IOTA full nodes.
+	\item	Proof-of-Work (PoW): Perform a series of mathametic calculation for the transaction in order to be validated.
+\end{itemize}
+
+Tips selection requires a stable network connection to wait the response from IOTA full nodes ,and Proof-of-Work (PoW) needs computation power to perform. Figure. \ref{fig:mam_send} shows PDF of publishing one message to MAM endpoint for 100 times. The average time for PC to send a message is 48.1069 seconds, and Raspberry Pi 3 takes 743.8586 seconds.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=3.3 in]{mam_send}
+    \caption{Time cost of sending a message through MAM.}
+    \label{fig:mam_send}
+\end{figure}
+
+MAM operations take a lot of time for both devices, but Raspberry Pi 3 spends even more time than PC. The simulation results above indicate that MAM is difficult for low-level sensor devices to run, which these devices are the majority hardware as data providers in the data marketplace. Furthermore, sensors with the low computing power and weak internet connection are not able to have enough resources to handle data collection, data transmission on MAM and trading process with consumers simultaneously. Therefore, transferring MAM operations to brokers, which can be PCs or even more powerful machines, while ensuring the profit of providers can effectively solve performance problems and lower the threshold for participation in the data marketplace. However, even on PC, MAM operations still cost a considerable time, improving the performance is an essential issue that needs to be done for the next step.  
+
+
 
 \subsection{Smart Contract}
 
