--- a/references.bib
+++ b/references.bib
@@ -91,9 +91,9 @@
   author = "James Brogan, Immanuel Baskaran, Navin Ramachandrana",
 }
 
-@misc{IOTADataMarket,
-  title = {IOTA Data Marketplace},
-  howpublished= {\url{https://data.iota.org}},
+@misc{IOTAIdustryMarketplace,
+  title = {IOTA Industry Marketplace},
+  howpublished= {\url{https://industry.iota.org/}},
 }
 
 @inproceedings{3tierDataMarket,
