List Spin as a collaborator

--- a/paper.tex
+++ b/paper.tex
@@ -75,7 +75,7 @@
 %\newcommand{\orcidauthorB}{0000-0000-000-000X} % Add \orcidB{} behind the author's name
 
 % Authors, for the paper (add full first names)
-\Author{Zan-Jun Wang $^{1}$, Ching-Hua (Vivian) Lin $^{2}$, Yang-Hao Yuan $^{3}$ and Ching-Chun (Jim) Huang$^{2,}$*}
+\Author{Zan-Jun Wang $^{1}$, Ching-Hua (Vivian) Lin $^{2}$, Yang-Hao Yuan $^{3}$, Zih-shiuan (Spin) Yuan$^{3}$ and Ching-Chun (Jim) Huang$^{2,}$*}
 
 % Authors, for metadata in PDF
 \AuthorNames{Zan-Jun Wang, Ching-Hua (Vivian) Lin, Yang-Hao Yuan and Ching-Chun (Jim) Huang}
