Revise MAM descriptions

--- a/paper.tex
+++ b/paper.tex
@@ -206,7 +206,7 @@ Brokers represent data providers and consumers to perform computing tasks as bro
 \subsubsection{Components}
 \begin{itemize}[leftmargin=*,labelsep=5.8mm]
 \item \textbf{Mask Authenticated Messaging: }
-IOTA\cite{IOTAwhitepaper} is a feeless and scalable cryptocurrency while MAM is the second layer data communication protocol built on top of the IOTA network, the Tangle. MAM resolves the challenge of publishing authenticated streaming data as zero-value transactions to distributed ledgers, and allows access control of the data through encryption keys. 
+IOTA is a feeless cryptocurrency designed for IoT while MAM is the second layer data communication protocol built on top of the IOTA network, the Tangle. MAM resolves the challenge of publishing authenticated streaming data as zero-value transactions to distributed ledgers, and provides the ability to publish and fetch encrypted messages over the Tangle along with data integrity and access control.
 
 In IOTA protocol, seed is the identifier of its owner. An IOTA seed represents the ownership of all things associated with the user in the IOTA ecosystem, such as IOTA tokens or messages on the Tangle. With the seed, the owner can produce addresses and signatures in order to issue transactions or publish messages to MAM channels and endpoints.
 
